--- a/install
+++ b/install
@@ -1,11 +1,11 @@
 <?php
 /**
 *
-* install [English]
+* install [हिंदी]
 *
 * @package language
 * @version $Id$
-* @copyright (c) 2005 phpBB Group
+* @copyright (c) 2012 phpBBharat Group
 * @license http://opensource.org/licenses/gpl-license.php GNU Public License
 *
 */
@@ -37,11 +37,11 @@ if (empty($lang) || !is_array($lang))
 
 $lang = array_merge($lang, array(
 	'ADMIN_CONFIG'				=> 'Administrator configuration',
-	'ADMIN_PASSWORD'			=> 'Administrator password',
+	'ADMIN_PASSWORD'			=> 'प्रबंधक कूटशब्द ',
 	'ADMIN_PASSWORD_CONFIRM'	=> 'Confirm administrator password',
-	'ADMIN_PASSWORD_EXPLAIN'	=> 'Please enter a password between 6 and 30 characters in length.',
-	'ADMIN_TEST'				=> 'Check administrator settings',
-	'ADMIN_USERNAME'			=> 'Administrator username',
+	'ADMIN_PASSWORD_EXPLAIN'	=> 'आपका कूटशब्द ६ -३० शब्दों का होना चाहिए',
+	'ADMIN_TEST'				=> 'प्रबंधक सेटिंग देखें ',
+	'ADMIN_USERNAME'			=> 'प्रबंधक उपयोगकर्ता नाम ',
 	'ADMIN_USERNAME_EXPLAIN'	=> 'Please enter a username between 3 and 20 characters in length.',
 	'APP_MAGICK'				=> 'Imagemagick support [ Attachments ]',
 	'AUTHOR_NOTES'				=> 'Author notes<br />» %s',
