--- a/install
+++ b/install
@@ -54,7 +54,7 @@ $lang = array_merge($lang, array(
 	'BOARD_NOT_INSTALLED_EXPLAIN'	=> 'The phpBB Unified Convertor Framework requires a default installation of phpBB3 to function, please <a href="%s">proceed by first installing phpBB3</a>.',
 	'BACKUP_NOTICE'					=> 'Please backup your board before updating in case any problems arise during the update process.',
 
-	'CATEGORY'					=> 'Category',
+	'CATEGORY'					=> 'वर्ग',
 	'CACHE_STORE'				=> 'Cache type',
 	'CACHE_STORE_EXPLAIN'		=> 'The physical location where data is cached, filesystem is preferred.',
 	'CAT_CONVERT'				=> 'Convert',
